make numbers on mobile phone fixed size in px

--- a/css/styles.css
+++ b/css/styles.css
@@ -310,7 +310,7 @@ body.dark {
         border-radius: 13px;
         width: 60px;
         height: 60px;
-        font-size: 1.5rem;
+        font-size: 24px;
     }
 
     .row.last button {
